--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,3 +16,12 @@ section#login > div#imagem { background:rgb(0, 87, 41) url(../imagens/pexels-tet
 
 
 section#login > div#formulario {padding: 10px; display: block;}
+
+div#formulario > h1 {text-align: center; margin-bottom: 10px;}
+
+div#formulario > p {font-size: 0.8em;}
+
+
+
+
+
