--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,6 +21,21 @@ div#formulario > h1 {text-align: center; margin-bottom: 10px;}
 
 div#formulario > p {font-size: 0.8em;}
 
+div.campo > label {display: none;}
+
+
+
+form > div.campo {background-color:rgb(0, 87, 41) ; display: block; width: 100%;height: 40px; border-radius: 5px;margin: 5px 0px;}
+
+
+
+form > input[type=submit] {display: block; font-size: 1em;width: 100%;height: 40px;background-color: rgb(15, 190, 138);color: white;font-weight: bold;border: none; border-radius: 5px;}
+
+form > input[type=submit]:hover {background-color: rgb(6, 125, 86);}
+
+form > a.botao {display: block;text-align: center;font-size: 1em; width: 100%;height: 40px;background-color:rgb(15, 190, 138) ;border: 1px solid rgb(7, 119, 85);border-radius: 5px;text-decoration: none; color: white; margin-top: 5px;}
+
+form >a.botao:hover {background-color: rgb(6, 125, 86);}
 
 
 
